packages/wgpu/native/include/wgpu_native.h

typedef uint64_t WGPUTextureView;
typedef uint64_t WGPUShaderModule;
typedef uint64_t WGPUBindGroupLayout;
typedef struct WGPUBindGroupLayoutEntry {
  uint32_t binding;
  uint32_t visibility;
  uint32_t binding_type;
  uint32_t buffer_type;
  uint8_t has_dynamic_offset;
  uint64_t min_binding_size;
  uint32_t sampler_type;
  uint32_t texture_sample_type;
  uint32_t texture_view_dimension;
  uint8_t texture_multisampled;
  /**
   * Number of elements for binding arrays (0 = not an array).
   */
  uint32_t count;
} WGPUBindGroupLayoutEntry;
typedef struct WGPUBindGroupLayoutDescriptor {
  const struct WGPUBindGroupLayoutEntry *entries;
  uint32_t entry_count;
  const char *label;
} WGPUBindGroupLayoutDescriptor;
typedef struct WGPUBindGroupEntry {
  uint32_t binding;
  uint32_t resource_type;
  uint64_t resource;
  uint64_t offset;
  uint64_t size;
} WGPUBindGroupEntry;
typedef struct WGPUBindGroupDescriptor {
  WGPUBindGroupLayout layout;
  const struct WGPUBindGroupEntry *entries;
  uint32_t entry_count;
  const char *label;
} WGPUBindGroupDescriptor;
typedef uint64_t WGPUPipelineLayout;
typedef struct WGPUPipelineLayoutDescriptor {
  const WGPUBindGroupLayout *bind_group_layouts;
  uint32_t bind_group_layout_count;
  /**
   * Size in bytes of immediate (push constant) data. 0 = none.
   */
  uint32_t immediate_size;
  const char *label;
} WGPUPipelineLayoutDescriptor;
typedef struct WGPUVertexAttribute {
  uint32_t format;
  uint64_t offset;
  uint32_t shader_location;
} WGPUVertexAttribute;
typedef struct WGPUVertexBufferLayout {
  uint64_t array_stride;
  uint32_t step_mode;
  const struct WGPUVertexAttribute *attributes;
  uint32_t attribute_count;
} WGPUVertexBufferLayout;
typedef struct WGPUVertexState {
  WGPUShaderModule module;
  const char *entry_point;
  const struct WGPUVertexBufferLayout *buffers;
  uint32_t buffer_count;
  uint32_t constant_count;
  const char *const *constant_keys;
  const double *constant_values;
} WGPUVertexState;
typedef struct WGPUBlendComponent {
  uint32_t operation;
  uint32_t src_factor;
  uint32_t dst_factor;
} WGPUBlendComponent;
typedef struct WGPUColorTargetState {
  uint32_t format;
  uint8_t blend_enabled;
  struct WGPUBlendComponent blend_color;
  struct WGPUBlendComponent blend_alpha;
  uint32_t write_mask;
} WGPUColorTargetState;
typedef struct WGPUFragmentState {
  WGPUShaderModule module;
  const char *entry_point;
  const struct WGPUColorTargetState *targets;
  uint32_t target_count;
  uint32_t constant_count;
  const char *const *constant_keys;
  const double *constant_values;
} WGPUFragmentState;
typedef struct WGPUDepthStencilState {
  uint32_t format;
  uint8_t depth_write_enabled;
  uint32_t depth_compare;
  int32_t depth_bias;
  float depth_bias_slope_scale;
  float depth_bias_clamp;
  uint32_t stencil_front_compare;
  uint32_t stencil_front_fail_op;
  uint32_t stencil_front_depth_fail_op;
  uint32_t stencil_front_pass_op;
  uint32_t stencil_back_compare;
  uint32_t stencil_back_fail_op;
  uint32_t stencil_back_depth_fail_op;
  uint32_t stencil_back_pass_op;
  uint32_t stencil_read_mask;
  uint32_t stencil_write_mask;
} WGPUDepthStencilState;
typedef struct WGPURenderPipelineDescriptor {
  WGPUPipelineLayout layout;
  struct WGPUVertexState vertex;
  struct WGPUFragmentState fragment;
  uint32_t primitive_topology;
  uint32_t strip_index_format;
  uint32_t front_face;
  uint32_t cull_mode;
  uint8_t unclipped_depth;
  uint8_t depth_stencil_enabled;
  struct WGPUDepthStencilState depth_stencil;
  uint32_t multisample_count;
  uint32_t multisample_mask;
  uint8_t alpha_to_coverage_enabled;
  const char *label;
} WGPURenderPipelineDescriptor;
typedef struct WGPUComputePipelineDescriptor {
  WGPUPipelineLayout layout;
  WGPUShaderModule module;
  const char *entry_point;
  /**
   * Number of pipeline-overridable constants.
   */
  uint32_t constant_count;
  /**
   * Parallel array of constant key C-strings (length = constant_count).
   */
  const char *const *constant_keys;
  /**
   * Parallel array of constant f64 values (length = constant_count).
   */
  const double *constant_values;
  const char *label;
} WGPUComputePipelineDescriptor;
typedef struct WGPURenderPassColorAttachment {
  WGPUTextureView view;
  WGPUTextureView resolve_target;
  uint32_t load_op;
  uint32_t store_op;
  double clear_r;
  double clear_g;
  double clear_b;
  double clear_a;
  /**
   * Depth slice for 3D texture render targets (u32::MAX = None).
   */
  uint32_t depth_slice;
} WGPURenderPassColorAttachment;
typedef struct WGPURenderPassDepthStencilAttachment {
  WGPUTextureView view;
  uint32_t depth_load_op;
  uint32_t depth_store_op;
  float depth_clear_value;
  uint8_t depth_read_only;
  uint32_t stencil_load_op;
  uint32_t stencil_store_op;
  uint32_t stencil_clear_value;
  uint8_t stencil_read_only;
} WGPURenderPassDepthStencilAttachment;
typedef uint64_t WGPUQuerySet;
typedef struct WGPURenderPassDescriptor {
  const struct WGPURenderPassColorAttachment *color_attachments;
  uint32_t color_attachment_count;
  const struct WGPURenderPassDepthStencilAttachment *depth_stencil_attachment;
  WGPUQuerySet occlusion_query_set;
  /**
   * Max draw calls (0 = use default 50_000_000).
   */
  uint64_t max_draw_count;
  /**
   * Timestamp writes query set handle (0 = none).
   */
  WGPUQuerySet timestamp_writes_query_set;
  /**
   * Query index for beginning timestamp.
   */
  uint32_t timestamp_writes_beginning;
  /**
   * Query index for end timestamp.
   */
  uint32_t timestamp_writes_end;
  const char *label;
} WGPURenderPassDescriptor;
typedef struct WGPUComputePassDescriptor {
  /**
   * Timestamp writes query set handle (0 = none).
   */
  WGPUQuerySet timestamp_writes_query_set;
  /**
   * Query index for beginning timestamp.
   */
  uint32_t timestamp_writes_beginning;
  /**
   * Query index for end timestamp.
   */
  uint32_t timestamp_writes_end;
  const char *label;
} WGPUComputePassDescriptor;
typedef struct WGPURenderBundleEncoderDescriptor {
  const uint32_t *color_formats;
  uint32_t color_format_count;
  uint32_t depth_stencil_format;
  uint32_t sample_count;
  uint8_t depth_read_only;
  uint8_t stencil_read_only;
  const char *label;
} WGPURenderBundleEncoderDescriptor;