packages/wgpu/lib/src/ffi/bindings_generated.dart


final class WGPUBindGroupLayoutDescriptor extends ffi.Struct {
  external ffi.Pointer<WGPUBindGroupLayoutEntry> entries;

  @ffi.Uint32()
  external int entry_count;

  external ffi.Pointer<ffi.Char> label;
}

final class WGPUBindGroupEntry extends ffi.Struct {
  @ffi.Uint32()
  external int binding;

  @ffi.Uint32()
  external int resource_type;

  @ffi.Uint64()
  external int resource;

  @ffi.Uint64()
  external int offset;

  @ffi.Uint64()
  external int size;
}

final class WGPUBindGroupDescriptor extends ffi.Struct {
  @ffi.Uint64()
  external int layout;

  external ffi.Pointer<WGPUBindGroupEntry> entries;

  @ffi.Uint32()
  external int entry_count;

  external ffi.Pointer<ffi.Char> label;
}

final class WGPUPipelineLayoutDescriptor extends ffi.Struct {
  external ffi.Pointer<ffi.Uint64> bind_group_layouts;

  @ffi.Uint32()
  external int bind_group_layout_count;

  /// Size in bytes of immediate (push constant) data. 0 = none.
  @ffi.Uint32()
  external int immediate_size;

  external ffi.Pointer<ffi.Char> label;
}

final class WGPUVertexAttribute extends ffi.Struct {
  @ffi.Uint32()
  external int format;

  @ffi.Uint64()
  external int offset;

  @ffi.Uint32()
  external int shader_location;
}

final class WGPUVertexBufferLayout extends ffi.Struct {
  @ffi.Uint64()
  external int array_stride;

  @ffi.Uint32()
  external int step_mode;

  external ffi.Pointer<WGPUVertexAttribute> attributes;

  @ffi.Uint32()
  external int attribute_count;
}

final class WGPUVertexState extends ffi.Struct {
  @ffi.Uint64()
  external int module;

  external ffi.Pointer<ffi.Char> entry_point;

  external ffi.Pointer<WGPUVertexBufferLayout> buffers;

  @ffi.Uint32()
  external int buffer_count;

  @ffi.Uint32()
  external int constant_count;

  external ffi.Pointer<ffi.Pointer<ffi.Char>> constant_keys;

  external ffi.Pointer<ffi.Double> constant_values;
}

final class WGPUBlendComponent extends ffi.Struct {
  @ffi.Uint32()
  external int operation;

  @ffi.Uint32()
  external int src_factor;

  @ffi.Uint32()
  external int dst_factor;
}

final class WGPUColorTargetState extends ffi.Struct {
  @ffi.Uint32()
  external int format;

  @ffi.Uint8()
  external int blend_enabled;

  external WGPUBlendComponent blend_color;

  external WGPUBlendComponent blend_alpha;

  @ffi.Uint32()
  external int write_mask;
}

final class WGPUFragmentState extends ffi.Struct {
  @ffi.Uint64()
  external int module;

  external ffi.Pointer<ffi.Char> entry_point;

  external ffi.Pointer<WGPUColorTargetState> targets;

  @ffi.Uint32()
  external int target_count;

  @ffi.Uint32()
  external int constant_count;

  external ffi.Pointer<ffi.Pointer<ffi.Char>> constant_keys;

  external ffi.Pointer<ffi.Double> constant_values;
}

final class WGPUDepthStencilState extends ffi.Struct {
  @ffi.Uint32()
  external int format;

  @ffi.Uint8()
  external int depth_write_enabled;

  @ffi.Uint32()
  external int depth_compare;

  @ffi.Int32()
  external int depth_bias;

  @ffi.Float()
  external double depth_bias_slope_scale;

  @ffi.Float()
  external double depth_bias_clamp;

  @ffi.Uint32()
  external int stencil_front_compare;

  @ffi.Uint32()
  external int stencil_front_fail_op;

  @ffi.Uint32()
  external int stencil_front_depth_fail_op;

  @ffi.Uint32()
  external int stencil_front_pass_op;

  @ffi.Uint32()
  external int stencil_back_compare;

  @ffi.Uint32()
  external int stencil_back_fail_op;

  @ffi.Uint32()
  external int stencil_back_depth_fail_op;

  @ffi.Uint32()
  external int stencil_back_pass_op;

  @ffi.Uint32()
  external int stencil_read_mask;

  @ffi.Uint32()
  external int stencil_write_mask;
}

final class WGPURenderPipelineDescriptor extends ffi.Struct {
  @ffi.Uint64()
  external int layout;

  external WGPUVertexState vertex;

  external WGPUFragmentState fragment;

  @ffi.Uint32()
  external int primitive_topology;

  @ffi.Uint32()
  external int strip_index_format;

  @ffi.Uint32()
  external int front_face;

  @ffi.Uint32()
  external int cull_mode;

  @ffi.Uint8()
  external int unclipped_depth;

  @ffi.Uint8()
  external int depth_stencil_enabled;

  external WGPUDepthStencilState depth_stencil;

  @ffi.Uint32()
  external int multisample_count;

  @ffi.Uint32()
  external int multisample_mask;

  @ffi.Uint8()
  external int alpha_to_coverage_enabled;

  external ffi.Pointer<ffi.Char> label;
}

final class WGPUComputePipelineDescriptor extends ffi.Struct {
  @ffi.Uint64()
  external int layout;

  @ffi.Uint64()
  external int module;

  external ffi.Pointer<ffi.Char> entry_point;

  /// Number of pipeline-overridable constants.
  @ffi.Uint32()
  external int constant_count;

  /// Parallel array of constant key C-strings (length = constant_count).
  external ffi.Pointer<ffi.Pointer<ffi.Char>> constant_keys;

  /// Parallel array of constant f64 values (length = constant_count).
  external ffi.Pointer<ffi.Double> constant_values;

  external ffi.Pointer<ffi.Char> label;
}

final class WGPURenderPassColorAttachment extends ffi.Struct {
  @ffi.Uint64()
  external int view;

  @ffi.Uint64()
  external int resolve_target;

  @ffi.Uint32()
  external int load_op;

  @ffi.Uint32()
  external int store_op;

  @ffi.Double()
  external double clear_r;

  @ffi.Double()
  external double clear_g;

  @ffi.Double()
  external double clear_b;

  @ffi.Double()
  external double clear_a;

  /// Depth slice for 3D texture render targets (u32::MAX = None).
  @ffi.Uint32()
  external int depth_slice;
}

final class WGPURenderPassDepthStencilAttachment extends ffi.Struct {
  @ffi.Uint64()
  external int view;

  @ffi.Uint32()
  external int depth_load_op;

  @ffi.Uint32()
  external int depth_store_op;

  @ffi.Float()
  external double depth_clear_value;

  @ffi.Uint8()
  external int depth_read_only;

  @ffi.Uint32()
  external int stencil_load_op;

  @ffi.Uint32()
  external int stencil_store_op;

  @ffi.Uint32()
  external int stencil_clear_value;

  @ffi.Uint8()
  external int stencil_read_only;
}

final class WGPURenderPassDescriptor extends ffi.Struct {
  external ffi.Pointer<WGPURenderPassColorAttachment> color_attachments;

  @ffi.Uint32()
  external int color_attachment_count;

  external ffi.Pointer<WGPURenderPassDepthStencilAttachment>
  depth_stencil_attachment;

  @ffi.Uint64()
  external int occlusion_query_set;

  /// Max draw calls (0 = use default 50_000_000).
  @ffi.Uint64()
  external int max_draw_count;

  /// Timestamp writes query set handle (0 = none).
  @ffi.Uint64()
  external int timestamp_writes_query_set;

  /// Query index for beginning timestamp.
  @ffi.Uint32()
  external int timestamp_writes_beginning;

  /// Query index for end timestamp.
  @ffi.Uint32()
  external int timestamp_writes_end;

  external ffi.Pointer<ffi.Char> label;
}

final class WGPUComputePassDescriptor extends ffi.Struct {
  /// Timestamp writes query set handle (0 = none).
  @ffi.Uint64()
  external int timestamp_writes_query_set;

  /// Query index for beginning timestamp.
  @ffi.Uint32()
  external int timestamp_writes_beginning;

  /// Query index for end timestamp.
  @ffi.Uint32()
  external int timestamp_writes_end;

  external ffi.Pointer<ffi.Char> label;
}

final class WGPURenderBundleEncoderDescriptor extends ffi.Struct {
  external ffi.Pointer<ffi.Uint32> color_formats;

  @ffi.Uint32()
  external int color_format_count;

  @ffi.Uint32()
  external int depth_stencil_format;

  @ffi.Uint32()
  external int sample_count;

  @ffi.Uint8()
  external int depth_read_only;

  @ffi.Uint8()
  external int stencil_read_only;

  external ffi.Pointer<ffi.Char> label;
}
